--- a/emergencia-covid/ClientApp/src/app/apoyo/persona-consulta/persona-consulta.component.html
+++ b/emergencia-covid/ClientApp/src/app/apoyo/persona-consulta/persona-consulta.component.html
@@ -25,8 +25,8 @@
                 <td>{{ persona.edad}}</td>
                 <td>{{ persona.departamento}}</td>
                 <td>{{ persona.ciudad}}</td>
-                <td>{{ persona.valorapoyo}}</td>
-                <td>{{ persona.modalidadapoyo}}</td>
+                <td>{{ persona.valorApoyo}}</td>
+                <td>{{ persona.modalidadApoyo}}</td>
                 <td>{{ persona.fecha}}</td>
             </tr>
         </tbody>
