--- a/emergencia-covid/ClientApp/src/app/apoyo/persona-registro/persona-registro.component.html
+++ b/emergencia-covid/ClientApp/src/app/apoyo/persona-registro/persona-registro.component.html
@@ -5,7 +5,7 @@
             <div class="form-row ">
                 <div class="col-md-6 form-group">
                     <label for="inputIdentifacion">Identificacion</label>
-                    <input type="text" class="form-control" name="inputIdentifacion" [(ngModel)]="persona.identifacion">
+                    <input type="text" class="form-control" name="inputIdentifacion" [(ngModel)]="persona.identificacion">
                 </div>
                 <div class="col-md-6 form-group">
                     <label for="inputNombre">Nombre</label>
@@ -19,8 +19,8 @@
                     <label for="inputSexo">Sexo</label>
                     <select class="form-control" name="inputSexo" [(ngModel)]="persona.sexo">
                         <option>Seleccione..</option>
-                        <option>Masculino</option>
-                        <option>Femenino</option>
+                        <option value="M">Masculino</option>
+                        <option value="F">Femenino</option>
                     </select>
                 </div>
                 <div class="col-md-6 form-group">
@@ -37,22 +37,22 @@
                 </div>
                 <div class="col-md-6 form-group">
                     <label for="inputValorApoyo">Valor del apoyo</label>
-                    <input type="number" class="form-control" name="inputValorApoyo" [(ngModel)]="persona.valorapoyo">
+                    <input type="number" class="form-control" name="inputValorApoyo" [(ngModel)]="persona.valorApoyo">
                 </div>
             </div>
             <div class="form-group">
                 <label for="inputModalidadApoyo">Modalidad de apoyo</label>
-                <select class="form-control" name="inputApoyo " [(ngModel)]="persona.modalidadapoyo">
+                <select class="form-control" name="inputApoyo " [(ngModel)]="persona.modalidadApoyo">
                     <option>Seleccione...</option>
-                    <option>Alimentario</option>
-                    <option>Economico</option>
+                    <option value="Alimentario">Alimentario</option>
+                    <option value="Economico">Economico</option>
                 </select>
             </div>
             <div class="form-group">
                 <label for="inputFechaRegistro">Fecha de registro</label>
                 <input type="date" class="form-control" name="inputFechaRegistro" [(ngModel)]="persona.fecha">
             </div>
-            <button type="submit" class="btn btn-primary position">Registrar</button>
+            <button type="submit" class="btn btn-primary position" (click)="add()" >Registrar</button>
         </form>
     </div>
     <div class="img-position">
