--- a/emergencia-covid/ClientApp/src/app/apoyo/persona-consulta/persona-consulta.component.html
+++ b/emergencia-covid/ClientApp/src/app/apoyo/persona-consulta/persona-consulta.component.html
@@ -1,4 +1,7 @@
 <div class="contenedor-main">
+
+    <input [(ngModel)]="searchText" class="form-control form-control-lg" type="text" placeholder="Busqueda... ">
+    
     <table class="table" *ngIf='personas && personas.length'>
         <thead>
             <tr>
@@ -16,7 +19,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let persona of personas; index as i">
+            <tr *ngFor="let persona of personas|filtroPersona:searchText; index as i">
                 <th scope="row">{{ i + 1 }}</th>
                 <td>{{ persona.identificacion}} </td>
                 <td>{{ persona.nombre}}</td>
@@ -25,9 +28,9 @@
                 <td>{{ persona.edad}}</td>
                 <td>{{ persona.departamento}}</td>
                 <td>{{ persona.ciudad}}</td>
-                <td>{{ persona.valorApoyo}}</td>
-                <td>{{ persona.modalidadApoyo}}</td>
-                <td>{{ persona.fecha}}</td>
+                <td>{{ persona.apoyo.valorApoyo|currency:"COP":"symbol"}}</td>
+                <td>{{ persona.apoyo.modalidadApoyo}}</td>
+                <td>{{ persona.apoyo.fecha|date:'shortDate'}}</td>
             </tr>
         </tbody>
     </table>
